--- a/package.json
+++ b/package.json
@@ -9,14 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "4.1.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.5",
     "expo": "~50.0.2",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "global": "^4.4.0",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-safe-area-view": "^1.1.1",
+    "react-native-screens": "^3.29.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
+    "eslint": "^8.56.0",
+    "eslint-config-universe": "^12.0.0",
+    "prettier": "^3.2.4",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
