--- a/package.json
+++ b/package.json
@@ -6,31 +6,42 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "dev": "npx expo start --tunnel"
   },
   "dependencies": {
     "@expo/ngrok": "4.1.0",
     "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@reduxjs/toolkit": "^2.0.1",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@types/color": "^3.0.6",
     "axios": "^1.6.5",
-    "expo": "~50.0.2",
+    "color": "^4.2.3",
+    "expo": "50.0.2",
     "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "global": "^4.4.0",
+    "moment": "^2.30.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "^2.14.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-picker": "^4.3.7",
+    "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.29.0",
+    "react-native-slidepicker": "^2.0.2",
+    "react-navigation": "^5.0.0",
+    "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
