--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.73.2",
     "react-native-gesture-handler": "^2.14.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-pager-view": "^6.2.3",
     "react-native-picker": "^4.3.7",
     "react-native-picker-select": "^9.0.0",
     "react-native-safe-area-context": "^4.8.2",
