--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "axios": "^1.6.5",
     "color": "^4.2.3",
     "expo": "50.0.2",
+    "expo-camera": "~14.0.3",
+    "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "~14.7.1",
+    "expo-location": "~16.5.2",
     "expo-status-bar": "~1.11.1",
     "global": "^4.4.0",
     "moment": "^2.30.1",
@@ -41,6 +44,7 @@
     "react-native-safe-area-view": "^1.1.1",
     "react-native-screens": "^3.29.0",
     "react-native-slidepicker": "^2.0.2",
+    "react-native-virtualized-view": "^1.0.0",
     "react-navigation": "^5.0.0",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^9.1.0",
